# UAS-PCD

./: .gitignore  README.md  instruction.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
monitor/: urls.py  views.py
monitor/static/css/: styles.css
monitor/static/js/: diagnostics.js
monitor/templates/: index.html
